# minimal_sdl3

./: .gitignore  CMakeLists.txt  README.md  hello copy.c  main.c
